// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metadata repo [getIdsWhereIdIn] should return ids of available metadata by ids 1`] = `
[
  {
    "_id": "eth:0x0e28B28681B1C6b58561A97720F50176ECA387E5:0x2612",
  },
  {
    "_id": "eth:0x8393E4fd19623660074dDd66576Ec071F2D91292:0x0340",
  },
  {
    "_id": "eth:0xE1E484251ffFee048A839bc2d68C160BD8C82aBB:0x0441",
  },
]
`;

exports[`Metadata repo [getIdsWhereIdIn] should return ids of available metadata by ids 2`] = `[]`;

exports[`Metadata repo [getIdsWhereIdIn] should return ids of available metadata by ids 3`] = `
[
  {
    "_id": "eth:0x8393E4fd19623660074dDd66576Ec071F2D91292:0x0340",
  },
  {
    "_id": "eth:0xE1E484251ffFee048A839bc2d68C160BD8C82aBB:0x0441",
  },
]
`;

exports[`Metadata repo [getIdsWhereIdIn] should return ids of available metadata by ids 4`] = `
[
  {
    "_id": "eth:0x0e28B28681B1C6b58561A97720F50176ECA387E5:0x2612",
  },
  {
    "_id": "eth:0x8393E4fd19623660074dDd66576Ec071F2D91292:0x0340",
  },
  {
    "_id": "eth:0x8393E4fd19623660074dDd66576Ec071F2D91292:0x0341",
  },
  {
    "_id": "eth:0xE1E484251ffFee048A839bc2d68C160BD8C82aBB:0x0441",
  },
]
`;

exports[`Metadata repo [getWhereIdIn] method should retrieve metadata documents by ids 1`] = `
[
  {
    "_id": "eth:0x000386E3F7559d9B6a2F5c46B4aD1A9587D59Dc3:0x72",
    "metadata": "{"name":"NIKE  APE #114","description":"COUNTDOWN OVER. MINTING LIVE.","image":"http://gateway.pinatas.cloud/ipfs/nikebanc/(18).jpg"}",
    "type": "https",
  },
  {
    "_id": "eth:0x74ba9caaa5847e142263d5F7645fFeD92e5087E5:0x017e",
    "metadata": "{"description":"Born out of a bad batch of fermented ...","image":"ipfs://QmbCmZ2yLMG1U24kAo1or4Kn7w6tZ3u7KEZnC3s5Jo1wQL/382.png"}",
    "type": "ipfs",
  },
]
`;

exports[`Metadata repo [getWhereIdIn] method should retrieve metadata documents by ids 2`] = `[]`;

exports[`Metadata repo [getWhereIdIn] method should retrieve metadata documents by ids 3`] = `
[
  {
    "_id": "eth:0x000386E3F7559d9B6a2F5c46B4aD1A9587D59Dc3:0x5b",
    "metadata": "{"name":"Braindom #2","description":"COUNTDOWN OVER. MINTING LIVE.","image":"ipfs://QmbCmZ2yLMG1U24kAo1or4Kn7w6tZ3u7KEZnC3s5Jo1wQL/382.png"}",
    "type": "https",
  },
]
`;

exports[`Metadata repo [getWhereIdIn] method should retrieve metadata documents by ids 4`] = `
[
  {
    "_id": "eth:0x000386E3F7559d9B6a2F5c46B4aD1A9587D59Dc3:0x5b",
    "metadata": "{"name":"Braindom #2","description":"COUNTDOWN OVER. MINTING LIVE.","image":"ipfs://QmbCmZ2yLMG1U24kAo1or4Kn7w6tZ3u7KEZnC3s5Jo1wQL/382.png"}",
    "type": "https",
  },
  {
    "_id": "eth:0x000386E3F7559d9B6a2F5c46B4aD1A9587D59Dc3:0x72",
    "metadata": "{"name":"NIKE  APE #114","description":"COUNTDOWN OVER. MINTING LIVE.","image":"http://gateway.pinatas.cloud/ipfs/nikebanc/(18).jpg"}",
    "type": "https",
  },
  {
    "_id": "eth:0x74ba9caaa5847e142263d5F7645fFeD92e5087E5:0x017e",
    "metadata": "{"description":"Born out of a bad batch of fermented ...","image":"ipfs://QmbCmZ2yLMG1U24kAo1or4Kn7w6tZ3u7KEZnC3s5Jo1wQL/382.png"}",
    "type": "ipfs",
  },
]
`;

exports[`Metadata repo [save] method should save a metadata document to MongoDB in metadata collection 1`] = `
{
  "_id": "eth:0xc4545a0f49e1246bdba8601fd79412d240cfc6aa:0xc4425a0f49e1246bdba8601fd79412d240cfc6aa",
  "metadata": "{"image":"https://gateway.pinata.cloud/ipfs/QmWHgFha8FLDf6jeLhGLCrHbVsprT32dtPziBektrZNsMm/7883.png","tokenId":"0xc4425a0f49e1246bdba8601fd79412d240cfc6aa","name":"Superlative Mutant Ape #7883","attributes":[{"trait_type":"Background","value":"M1 Universe"},{"trait_type":"Clothes","value":"M1 Coat"},{"trait_type":"Eyes","value":"M1 Yellow Suprised"},{"trait_type":"Fur","value":"M1 Green"},{"trait_type":"Hat","value":"M1 Cowboy Hat"},{"trait_type":"Mouth","value":"M1 Jovial"}]}",
  "type": "https",
}
`;

exports[`Metadata repo [save] method should save a metadata document to MongoDB in metadata collection 2`] = `
{
  "_id": "eth:0xc4545a0f49e1246bdba8601fd79412d240cfc6aa:0xc4425a0f49e1246bdba8601fd79412d240cfc6aa",
  "metadata": "{"image":"https://gateway.pinata.cloud/ipfs/QmWHgFha8FLDf6jeLhGLCrHbVsprT32dtPziBektrZNsMm/7883.png","tokenId":"0xc4425a0f49e1246bdba8601fd79412d240cfc6aa","name":"Superlative Mutant Ape #7883","attributes":[{"trait_type":"Background","value":"M1 Universe"},{"trait_type":"Clothes","value":"M1 Coat"},{"trait_type":"Eyes","value":"M1 Yellow Suprised"},{"trait_type":"Fur","value":"M1 Green"},{"trait_type":"Hat","value":"M1 Cowboy Hat"},{"trait_type":"Mouth","value":"M1 Jovial"}]}",
  "type": "https",
}
`;
